# OOP_Laba_1

./: CMakeLists.txt  README.md
include/: main.h
src/: main  main.cpp  turkish_converter.cpp
tests/: tests.cpp
